testdata/baselines/reference/submodule/conformance/checkJsxChildrenCanBeTupleType.errors.txt
checkJsxChildrenCanBeTupleType.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== checkJsxChildrenCanBeTupleType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react'
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface ResizablePanelProps {
      children: [React.ReactNode, React.ReactNode]
    }
    
    class ResizablePanel extends React.Component<
      ResizablePanelProps, any> {}
    
    const test = <ResizablePanel>
      <div />
      <div />
    </ResizablePanel>
    
    const testErr = <ResizablePanel>
      <div />
      <div />
      <div />
    </ResizablePanel>